force-app/main/default/objects/Work_Request__c/Work_Request__c.object-meta.xml
<CustomObject>
    <description>Work requests are a way to manage new project requests, change orders, and other types of IT service requests that are &quot;over&quot; a couple days of effort.  If the effort is more of a &quot;IT help desk&quot; request, we suggest you use Salesforce.com Cases object.  Often, organizations will use this object for the business analyst and use a workflow approval process to have the project management office approve/reject the work request based on the cost/benefit analysis.  Work requests can and should be associated to the appropriate program for reporting purposes.</description>
    <label>Work Request</label>
    <nameField>
        <displayFormat>WR-{MM}{DD}{YY}-{000}</displayFormat>
        <label>Work Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>