force-app/main/default/objects/Work_Request__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <inlineHelpText>This is the date that the work request is either approved or rejected.</inlineHelpText>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>