force-app/main/default/objects/Work_Request__c/fields/Business_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Business_Sponsor__c</fullName>
    <label>Business Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>