force-app/main/default/objects/Work_Request__c/fields/Estimated_Cost_Budget__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_Budget__c</fullName>
    <label>Estimated Cost Budget</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>