force-app/main/default/objects/Work_Request__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N80000002yDuiEAE</relationshipName>
    <type>Lookup</type>
</CustomField>