force-app/main/default/objects/Work_Request__c/fields/Expected_Cost_Savings__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cost_Savings__c</fullName>
    <label>Expected Cost Savings</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>