force-app/main/default/objects/Work_Request__c/fields/Expected_Revenue_Increase__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_Increase__c</fullName>
    <label>Expected Revenue Increase</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>