force-app/main/default/objects/Work_Request__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Satisfaction</fullName>
            </value>
            <value>
                <fullName>Grow Business</fullName>
            </value>
            <value>
                <fullName>Run Business</fullName>
            </value>
            <value>
                <fullName>Transformation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>