force-app/main/default/objects/Work_Request__c/fields/I_need_to_know_by_Date__c.field-meta.xml
<CustomField>
    <fullName>I_need_to_know_by_Date__c</fullName>
    <inlineHelpText>Please enter the date at which the business unit requires a budget go/no-go decision.</inlineHelpText>
    <label>&quot;I need to know by&quot; Date</label>
    <type>Date</type>
</CustomField>