force-app/main/default/objects/Work_Request__c/fields/Known_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Known_Assumptions__c</fullName>
    <inlineHelpText>What is the current state/situation?   Please list all that is known and unknown about the proposed solution.</inlineHelpText>
    <label>Assumptions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>