force-app/main/default/objects/Work_Request__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Work Requests</relationshipLabel>
    <relationshipName>R00N80000002yGvHEAU</relationshipName>
    <type>Lookup</type>
</CustomField>