force-app/main/default/objects/Work_Request__c/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <inlineHelpText>Please describe the business problem you are trying to solve.</inlineHelpText>
    <label>Problem Statement</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>