force-app/main/default/objects/Work_Request__c/fields/Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Solution__c</fullName>
    <inlineHelpText>Please describe your desired solution to the problem statement.</inlineHelpText>
    <label>Proposed Solution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>