force-app/main/default/objects/Work_Request__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <label>Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>LACA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>