force-app/main/default/objects/Work_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N80000002yE2hEAE</relationshipName>
    <type>Lookup</type>
</CustomField>