force-app/main/default/objects/Work_Request__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <inlineHelpText>What is the associated concerns or risks?  What happens if no action is taken?</inlineHelpText>
    <label>Risks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>