force-app/main/default/objects/Work_Request__c/fields/Work_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Request_Status__c</fullName>
    <label>Work Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>IT Review</fullName>
            </value>
            <value>
                <fullName>Procurement Review</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>