force-app/main/default/objects/Work_Request__c/fields/Work_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Request_Type__c</fullName>
    <inlineHelpText>Please note that a work request is not a trouble ticket.  Work requests are submitted to the project management office for strategic improvements for business units.</inlineHelpText>
    <label>Work Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project Request</fullName>
            </value>
            <value>
                <fullName>Scope Change</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Infrastructure Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>